[tool.poetry]
name = "snakeandladder"
version = "0.0.1"
description = ""
authors = ["aejaz"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "*"

[tool.poetry.scripts]
simulate = "snakeandladder.main:main"
test = "tests.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
